<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="305dp"
            android:layout_height="252dp"
            android:layout_marginTop="92dp"
            android:src="@drawable/on_boarding_2"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/on_boarding_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_aking"
            tools:ignore="UnusedAttribute" />

        <TextView
            style="@style/on_boarding_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_boarding_2_message"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/svg_on_boarding"
        android:backgroundTint="#6074F9"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.36"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue_boarding_2"
            style="@style/on_boarding_button"
            android:layout_marginTop="12dp"
            android:layout_width="295dp"
            android:layout_height="52dp"
            android:text="@string/next" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/login_button_on_boarding"
            android:layout_marginTop="12dp"
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>